--- a/index.html
+++ b/index.html
@@ -7,18 +7,31 @@
         <meta name="author" content="Stéphane Girault">
         <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
         <link href="css/main.css" rel="stylesheet" type="text/css" />
-    </head>
+        <script type="text/javascript">
 
-    <body>
-        <img alt="full screen background image" src="img/background.jpg" id="full-screen-background-image">
-        <div id="container">
-            <header>
-                <h1>Let's Root</h1>
-            </header>
-            <div id="main">
-                <div>Derniers préparatifs avant lancement...</div>
-                <div>
-                    <ul>
+            var _gaq = _gaq || [];
+            _gaq.push(['_setAccount', 'UA-25220757-1']);
+            _gaq.push(['_trackPageview']);
+
+            (function() {
+             var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+             ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+             var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+             })();
+
+         </script>
+     </head>
+
+     <body>
+         <img alt="full screen background image" src="img/background.jpg" id="full-screen-background-image">
+         <div id="container">
+             <header>
+             <h1>Let's Root</h1>
+             </header>
+             <div id="main">
+                 <div>Derniers préparatifs avant lancement...</div>
+                 <div>
+                     <ul>
                         <li>
                         <a href="http://doyoubuzz.com/stephane-girault" title="Curriculum Vitae">Qui suis je ?</a>
                         </li>
