dernière version avant changement

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
          <div id="container">
              <header>
              <h1>Let's Root</h1>
+             <div>Développement d'applications web</div>
              </header>
              <div id="main">
                  <div>Derniers préparatifs avant lancement...</div>
@@ -43,11 +44,11 @@
                 <div class="push"></div>
             </div>
             <footer>
-            <p>
+            <!--p>
             <a href="http://jigsaw.w3.org/css-validator/check/referer">
                 <img style="border:0;width:88px;height:31px" src="http://jigsaw.w3.org/css-validator/images/vcss" alt="CSS Valide !" />
             </a>
-            </p>
+            </p-->
             </footer>
         </div>
     </body>
