css mis en place

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
         <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
         <link href="css/main.css" rel="stylesheet" type="text/css" />
         <script type="text/javascript">
-
             var _gaq = _gaq || [];
             _gaq.push(['_setAccount', 'UA-25220757-1']);
             _gaq.push(['_trackPageview']);
@@ -18,38 +17,22 @@
              ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
              var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
              })();
-
          </script>
      </head>
 
      <body>
-         <img alt="full screen background image" src="img/background.jpg" id="full-screen-background-image">
          <div id="container">
              <header>
-             <h1>Let's Root</h1>
-             <div>Développement d'applications web</div>
              </header>
+                 <div id="contact" class="rotate_10"><a href="" title="" >CONTACT</a></div>
+                 <div id="cv" class="rotate_10"><a href="http://wwww.doyoubuzz.net/stephane-girault" title="" >CV</a></div>
              <div id="main">
-                 <div>Derniers préparatifs avant lancement...</div>
-                 <div>
-                     <ul>
-                        <li>
-                        <a href="http://doyoubuzz.com/stephane-girault" title="Curriculum Vitae">Qui suis je ?</a>
-                        </li>
-                        <li>
-                        <a href="mailto:stephane@letsroot.net">M'écrire</a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="push"></div>
-            </div>
-            <footer>
-            <!--p>
-            <a href="http://jigsaw.w3.org/css-validator/check/referer">
-                <img style="border:0;width:88px;height:31px" src="http://jigsaw.w3.org/css-validator/images/vcss" alt="CSS Valide !" />
-            </a>
-            </p-->
-            </footer>
-        </div>
-    </body>
-</html>
+                 <h1>LET<span>'</span>S ROOT</h1>
+                 <h2>DÉVELOPPEMENT D'APPLICATIONS WEB</h2>
+             </div>
+             <div id="realisations" class="rotate_minus_10"><a href="" title="" >RÉALISATIONS</a></div>
+             <footer>
+             </footer>
+         </div>
+     </body>
+ </html>
