--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Letsroot.net | Blue geek </title>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-        <meta name="description" content="">
+        <meta name="description" content="Développeur Web à Angers">
         <meta name="author" content="Stéphane Girault">
         <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
         <link href="css/main.css" rel="stylesheet" type="text/css" />
@@ -24,13 +24,17 @@
          <div id="container">
              <header>
              </header>
-                 <div id="contact" class="rotate_10"><a href="" title="" >CONTACT</a></div>
-                 <div id="cv" class="rotate_10"><a href="http://wwww.doyoubuzz.net/stephane-girault" title="" >CV</a></div>
+             <div id="perso">
+                 <a href="/contact" title="" class="rotate_35" id="contact">CONTACT</a>
+                 <a href="http://www.doyoubuzz.net/stephane-girault" title="" class="rotate_35" id="cv">CV</a>
+             </div>
              <div id="main">
                  <h1>LET<span>'</span>S ROOT</h1>
                  <h2>DÉVELOPPEMENT D'APPLICATIONS WEB</h2>
              </div>
-             <div id="realisations" class="rotate_minus_10"><a href="" title="" >RÉALISATIONS</a></div>
+             <div id="realisations" >
+                 <a href="/realisations" title="" class="rotate_minus_15">RÉALISATIONS</a>
+             </div>
              <footer>
              </footer>
          </div>
