et une version avec un fond artichaud ?

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
      </head>
 
      <body>
+         <img alt="full screen background image" src="img/background2.jpg" id="full-screen-background-image">
          <div id="container">
              <header>
              </header>
