--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
              <header>
              </header>
              <div id="perso">
-                 <a href="/contact" title="" class="rotate_35" id="contact">CONTACT</a>
-                 <a href="http://www.doyoubuzz.net/stephane-girault" title="" class="rotate_35" id="cv">CV</a>
+                 <a href="/contact" title="Demandez-moi ce que je peux faire pour vous" class="rotate_35" id="contact">CONTACT</a>
+                 <a href="http://www.doyoubuzz.net/stephane-girault" title="Ce que j'ai fait avant Let's Root (nouvelle fenêtre)" class="rotate_35" id="cv" target="_blank">CV</a>
              </div>
              <div id="main">
                  <h1>LET<span>'</span>S ROOT</h1>
                  <h2>DÉVELOPPEMENT D'APPLICATIONS WEB</h2>
              </div>
              <div id="realisations" >
-                 <a href="/realisations" title="" class="rotate_minus_15">RÉALISATIONS</a>
+                 <a href="/realisations" title="Ce que j'ai fait depuis Let's Root" class="rotate_minus_15">RÉALISATIONS</a>
              </div>
              <footer>
              </footer>
