encore et encore

--- a/index.html
+++ b/index.html
@@ -21,23 +21,27 @@
      </head>
 
      <body>
-         <img alt="full screen background image" src="img/background2.jpg" id="full-screen-background-image">
+         <img alt="full screen background image" src="img/background5.jpg" id="full-screen-background-image">
          <div id="container">
-             <header>
-             </header>
-             <div id="perso">
-                 <a href="/contact" title="Demandez-moi ce que je peux faire pour vous" class="rotate_35" id="contact">CONTACT</a>
-                 <a href="http://www.doyoubuzz.net/stephane-girault" title="Ce que j'ai fait avant Let's Root (nouvelle fenêtre)" class="rotate_35" id="cv" target="_blank">CV</a>
+             <div id="first">
+                 <div id="contact">
+                     <a href="/contact" title="Demandez-moi ce que je peux faire pour vous" class="rotate_35" >CONTACT</a>
+                 </div>
+                 <div id="cv">
+                     <a href="http://www.doyoubuzz.net/stephane-girault" title="Ce que j'ai fait avant Let's Root (nouvelle fenêtre)" class="rotate_35" target="_blank">CV</a>
+                 </div>
              </div>
-             <div id="main">
-                 <h1>LET<span>'</span>S ROOT</h1>
-                 <h2>DÉVELOPPEMENT D'APPLICATIONS WEB</h2>
+             <div id="second">
+                 <div id="title">
+                     <h1>LET<span>'</span>S ROOT#</h1>
+                     <h2>DÉVELOPPEMENT D'APPLICATIONS WEB</h2>
+                 </div>
              </div>
-             <div id="realisations" >
-                 <a href="/realisations" title="Ce que j'ai fait depuis Let's Root" class="rotate_minus_15">RÉALISATIONS</a>
+             <div id="third" >
+                 <div id="realisations">
+                     <a href="/realisations.html" title="Ce que j'ai fait depuis Let's Root" class="rotate_minus_15">RÉALISATIONS</a>
+                 </div>
              </div>
-             <footer>
-             </footer>
          </div>
      </body>
  </html>
