--- a/realisations.html
+++ b/realisations.html
@@ -23,9 +23,10 @@
      </head>
 
      <body>
+         <img alt="full screen background image" src="img/background6.jpg" id="full-screen-background-image">
          <div class="container-fluid">
              <header>
-                 <h1>LET<span>'</span>S ROOT</h1>
+             <h1>LET<span>'</span>S ROOT</h1>
                  <h2>DÉVELOPPEMENT D'APPLICATIONS WEB</h2>
              </header>
              <div class="sidebar">
