fond sans gribouillis

--- a/index.html
+++ b/index.html
@@ -6,22 +6,12 @@
         <meta name="description" content="Développeur Web à Angers">
         <meta name="author" content="Stéphane Girault">
         <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+        <link href="css/reset.css" rel="stylesheet" type="text/css" />
         <link href="css/main.css" rel="stylesheet" type="text/css" />
-        <script type="text/javascript">
-            var _gaq = _gaq || [];
-            _gaq.push(['_setAccount', 'UA-25220757-1']);
-            _gaq.push(['_trackPageview']);
-
-            (function() {
-             var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-             ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-             var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-             })();
-         </script>
      </head>
 
      <body>
-         <img alt="full screen background image" src="img/background5.jpg" id="full-screen-background-image">
+         <img src="img/background.jpg" class="bg">
          <div id="container">
              <div id="first">
                  <div id="contact">
@@ -43,5 +33,16 @@
                  </div>
              </div>
          </div>
+        <script type="text/javascript">
+            var _gaq = _gaq || [];
+            _gaq.push(['_setAccount', 'UA-25220757-1']);
+            _gaq.push(['_trackPageview']);
+
+            (function() {
+             var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+             ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+             var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+             })();
+         </script>
      </body>
  </html>
