modernizer + plus de positionnement

--- a/index.html
+++ b/index.html
@@ -8,30 +8,25 @@
         <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
         <link href="css/reset.css" rel="stylesheet" type="text/css" />
         <link href="css/main.css" rel="stylesheet" type="text/css" />
+        <script src="js/modernizr.custom.57212.js"></script>
      </head>
 
      <body>
          <img src="img/background.jpg" class="bg">
          <div id="container">
-             <div id="first">
-                 <div id="contact">
-                     <a href="/contact" title="Demandez-moi ce que je peux faire pour vous" class="rotate_35" >CONTACT</a>
-                 </div>
-                 <div id="cv">
-                     <a href="http://www.doyoubuzz.net/stephane-girault" title="Ce que j'ai fait avant Let's Root (nouvelle fenêtre)" class="rotate_35" target="_blank">CV</a>
-                 </div>
-             </div>
-             <div id="second">
-                 <div id="title">
+                 <div class="title">
                      <h1>LET<span>'</span>S ROOT#</h1>
                      <h2>DÉVELOPPEMENT D'APPLICATIONS WEB</h2>
                  </div>
-             </div>
-             <div id="third" >
-                 <div id="realisations">
+                 <div class="contact">
+                     <a href="/contact" title="Demandez-moi ce que je peux faire pour vous" class="rotate_35" >CONTACT</a>
+                 </div>
+                 <div class="cv">
+                     <a href="http://www.doyoubuzz.net/stephane-girault" title="Ce que j'ai fait avant Let's Root (nouvelle fenêtre)" class="rotate_35" target="_blank">CV</a>
+                 </div>
+                 <div class="realisations">
                      <a href="/realisations.html" title="Ce que j'ai fait depuis Let's Root" class="rotate_minus_15">RÉALISATIONS</a>
                  </div>
-             </div>
          </div>
         <script type="text/javascript">
             var _gaq = _gaq || [];
