--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
      <body>
          <img src="img/background.jpg" class="bg">
+         <img src="img/gribouillis.png" class="grib">
          <div id="container">
                  <div class="title">
                      <h1>LET<span>'</span>S ROOT#</h1>
