--- a/index.html
+++ b/index.html
@@ -13,20 +13,20 @@
 
      <body>
          <img src="img/background.jpg" class="bg">
-         <img src="img/gribouillis.png" class="grib">
          <div id="container">
+         <img src="img/gribouillis.png" class="grib">
                  <div class="title">
                      <h1>LET<span>'</span>S ROOT#</h1>
                      <h2>DÉVELOPPEMENT D'APPLICATIONS WEB</h2>
                  </div>
-                 <div class="contact">
-                     <a href="/contact" title="Demandez-moi ce que je peux faire pour vous" class="rotate_35" >CONTACT</a>
+                 <div class="contact rotate_35">
+                     <a href="/contact" title="Demandez-moi ce que je peux faire pour vous"  >CONTACT</a>
                  </div>
-                 <div class="cv">
-                     <a href="http://www.doyoubuzz.net/stephane-girault" title="Ce que j'ai fait avant Let's Root (nouvelle fenêtre)" class="rotate_35" target="_blank">CV</a>
+                 <div class="cv rotate_35">
+                     <a href="http://www.doyoubuzz.net/stephane-girault" title="Ce que j'ai fait avant Let's Root (nouvelle fenêtre)" class="" target="_blank">CV</a>
                  </div>
-                 <div class="realisations">
-                     <a href="/realisations.html" title="Ce que j'ai fait depuis Let's Root" class="rotate_minus_15">RÉALISATIONS</a>
+                 <div class="realisations rotate_minus_15">
+                     <a href="/realisations.html" title="Ce que j'ai fait depuis Let's Root" class="">RÉALISATIONS</a>
                  </div>
          </div>
         <script type="text/javascript">
