lien vers realisations

--- a/realisations.html
+++ b/realisations.html
@@ -6,9 +6,50 @@
         <meta name="description" content="Développeur Web à Angers">
         <meta name="author" content="Stéphane Girault">
         <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+        <link href="css/reset.css" rel="stylesheet" type="text/css" />
         <link href="css/bootstrap-1.2.0.min.css" rel="stylesheet" type="text/css" />
         <link href="css/main.css" rel="stylesheet" type="text/css" />
         <link href="css/inside.css" rel="stylesheet" type="text/css" />
+        <script src="js/modernizr.custom.57212.js"></script>
+     </head>
+
+     <body>
+         <img alt="développeur Web Angers" src="img/background.jpg" class="bg">
+         <div class="container-fluid">
+             <header>
+             <a href="/">
+             <h1>LET<span>'</span>S ROOT#</h1>
+                 <h2>DÉVELOPPEMENT D'APPLICATIONS WEB</h2>
+             </a>
+             </header>
+             <div class="sidebar">
+             </div>
+             <div class="content">
+                 <p>
+                 Associations, Artisans, Commerçants, Particuliers, je développe pour vous des sites de qualités à moindre coût.
+                 </p>
+                 <p>
+                 Agence Web, SS2I, Bureau de développement, je mets mes compétences de développeur web à votre service.
+                 </p>
+                 <p>
+                 N'hésitez pas à me contacter pour en savoir plus.
+                 </p>
+                 <p>
+                 Pour les plus geek d'entre vous, mon code est visible sur <a href="https://github.com/Anselme" title="Code de Stéphane Girault sur Github">Github</a> et les autres peuvent jetter un oeil sur ces quelques réalisations de sites : <a href="http://www.actes-environnement.com" alt="actes-environnement">Actes Environnement, une entreprise de valorisation des déchets</a> et <a href="http://lapaperie.letsroot.net" alt="La Paperie">La Paperie, Centre National des Arts de la Rue</a> (ce dernier est encore en prod, en ligne d'ici quelques jours).
+                 </p>
+                 <h3>CONTACT</h3>
+                 <p>
+                 stephane@letsroot.net
+                 </p>
+                 <h3>CV</h3>
+                 <p>
+                 <a href="http://www.doyoubuzz.com/stephane-girault/" alt="CV Stéphane Girault ">Mes vies antérieures</a>
+                 </p>
+             </div>
+
+             <footer>
+             </footer>
+         </div>
         <script type="text/javascript">
             var _gaq = _gaq || [];
             _gaq.push(['_setAccount', 'UA-25220757-1']);
@@ -20,30 +61,5 @@
              var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
              })();
          </script>
-     </head>
-
-     <body>
-         <img alt="full screen background image" src="img/background6.jpg" id="full-screen-background-image">
-         <div class="container-fluid">
-             <header>
-             <h1>LET<span>'</span>S ROOT</h1>
-                 <h2>DÉVELOPPEMENT D'APPLICATIONS WEB</h2>
-             </header>
-             <div class="sidebar">
-             </div>
-             <div class="content">
-                 <p>
-                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur arcu elit, elementum placerat malesuada quis, posuere eu lorem. In condimentum ullamcorper eleifend. Duis aliquam ultricies ultrices. Suspendisse potenti. Nulla aliquet urna sed diam ultricies vitae pharetra felis aliquet. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sapien leo, facilisis ac ornare sed, elementum eget turpis. Morbi eget elit eu metus luctus interdum. Sed vel arcu nunc. Ut venenatis posuere augue at tristique. Proin congue semper nunc eu pharetra. Duis a sapien orci. In hac habitasse platea dictumst. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Pellentesque purus mauris, ornare sed lobortis at, accumsan ut lorem.
-                 </p>
-                 <h3>CONTACT</h3>
-                 <p>
-                 stephane@letsroot.net
-                 </p>
-                 <h3>CV</h3>
-             </div>
-
-             <footer>
-             </footer>
-         </div>
      </body>
  </html>
