--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
                      <h2>DÉVELOPPEMENT D'APPLICATIONS WEB</h2>
                  </div>
                  <div class="contact rotate_35">
-                     <a href="mailto:contact@letsroot.net" title="Demandez-moi ce que je peux faire pour vous" class="rotate_hover" >CONTACT</a>
+                     <a href="/realisations.html" title="Demandez-moi ce que je peux faire pour vous" class="rotate_hover" >CONTACT</a>
                  </div>
                  <div class="cv rotate_35">
                      <a href="http://www.doyoubuzz.net/stephane-girault" title="Ce que j'ai fait avant Let's Root (nouvelle fenêtre)" class="rotate_hover" target="_blank">CV</a>
                  </div>
                  <div class="realisations rotate_minus_15">
-                     <a href="/realisations.html" title="Ce que j'ai fait depuis Let's Root" class="rotate_hover">RÉALISATIONS</a>
+                     <a href="/gallerie.html" title="Ce que j'ai fait depuis Let's Root" class="rotate_hover">RÉALISATIONS</a>
                  </div>
          </div>
         <script type="text/javascript">
