ajout site Nantes Data Journalism + jquery tipsy

--- a/gallerie.html
+++ b/gallerie.html
@@ -11,6 +11,7 @@
         <link href="css/main.css" rel="stylesheet" type="text/css" />
         <link href="css/inside.css" rel="stylesheet" type="text/css" />
         <link href="css/gallerie.css" rel="stylesheet" type="text/css" />
+        <link href="css/tipsy.css" rel="stylesheet" type="text/css" />
         <script src="js/modernizr.custom.57212.js"></script>
      </head>
 
@@ -28,23 +29,26 @@
              <div class="content">
                  <div class="row">
                      <div class="span-one-third">
-                         <a href="http://lapaperie.letsroot.net" title="La Paperie - Centre National des Arts de la Rue">
+                         <a href="http://www.lapaperie.fr" target="_blank" title="La Paperie - Centre National des Arts de la Rue" rel="tipsy">
                              <img src="img/lapaperie.png" alt="" width="256" height="160" class="diapo">
                          </a>
                      </div>
                      <div class="span-one-third">
-                         <a href="http://actes-environnement.com" title="Actes Environnement - Valorisation des Déchets">
+                         <a href="http://actes-environnement.com" target="_blank" title="Actes Environnement - Valorisation des Déchets" rel="tipsy">
                              <img src="img/actes-environnement.png" alt="" width="256" height="160" class="diapo">
                          </a>
                      </div>
                      <div class="span-one-third">
-                         <!--a href="" title="">
-                             <img src="img/test.png" alt="" width="256" height="160" class="diapo">
-                         </a-->
+                         <a href="http://nantes-data-journalisme.net" target="_blank" title="Laboratoire de Data Journalism" rel="tipsy">
+                             <img src="img/datanantes.png" alt="" width="256" height="160" class="diapo">
+                         </a>
                      </div>
                  </div>
              </div>
          </div>
+         <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6/jquery.min.js"></script>
+         <script type='text/javascript' src='js/jquery.tipsy.js'></script>
+         <script type='text/javascript' src='js/letsroot.js'></script>
          <script type="text/javascript">
              var _gaq = _gaq || [];
              _gaq.push(['_setAccount', 'UA-25220757-1']);
