--- a/realisations.html
+++ b/realisations.html
@@ -29,13 +29,13 @@
                  Associations, Artisans, Commerçants, Particuliers, je développe pour vous des sites de qualités à moindre coût.
                  </p>
                  <p>
-                 Agence Web, SS2I, Bureau de développement, je mets mes compétences de développeur web à votre service.
+                 Agences Web, SS2I, Bureaux de développement, je mets mes compétences de développeur web à votre service.
                  </p>
                  <p>
                  N'hésitez pas à me contacter pour en savoir plus.
                  </p>
                  <p>
-                 Pour les plus geek d'entre vous, mon code est visible sur <a href="https://github.com/Anselme" title="Code de Stéphane Girault sur Github">Github</a> et les autres peuvent jetter un oeil sur ces quelques réalisations de sites : <a href="http://www.actes-environnement.com" alt="actes-environnement">Actes Environnement, une entreprise de valorisation des déchets</a> et <a href="http://lapaperie.letsroot.net" alt="La Paperie">La Paperie, Centre National des Arts de la Rue</a> (ce dernier est encore en prod, en ligne d'ici quelques jours).
+                 Pour les plus geek d'entre vous, mon code est visible sur <a href="https://github.com/Anselme" title="Code de Stéphane Girault sur Github">Github</a> et les autres peuvent jetter un oeil sur ces quelques réalisations de sites : <a href="http://www.actes-environnement.com" alt="actes-environnement">Actes Environnement, une entreprise de valorisation des déchets</a> et <a href="http://www.lapaperie.fr" alt="La Paperie">La Paperie, Centre National des Arts de la Rue</a> .
                  </p>
                  <h3>CONTACT</h3>
                  <p>
