typo s/Root/root#/

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Letsroot.net | Blue geek </title>
+        <title>Let's root# | Green geek </title>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <meta name="description" content="Développeur Web à Angers">
         <meta name="author" content="Stéphane Girault">
@@ -24,10 +24,10 @@
                      <a href="/realisations.html" title="Demandez-moi ce que je peux faire pour vous" class="rotate_hover" rel="tipsy">CONTACT</a>
                  </div>
                  <div class="cv rotate_35">
-                     <a href="http://re.vu/stephane" title="Ce que j'ai fait avant Let's Root (nouvelle fenêtre)" class="rotate_hover" target="_blank" rel="tipsy">CV</a>
+                     <a href="http://re.vu/stephane" title="Ce que j'ai fait avant Let's root# (nouvelle fenêtre)" class="rotate_hover" target="_blank" rel="tipsy">CV</a>
                  </div>
                  <div class="realisations rotate_minus_15">
-                     <a href="/gallerie.html" title="Ce que j'ai fait depuis Let's Root" class="rotate_hover" rel="tipsy">RÉALISATIONS</a>
+                     <a href="/gallerie.html" title="Ce que j'ai fait depuis Let's root#" class="rotate_hover" rel="tipsy">RÉALISATIONS</a>
                  </div>
          </div>
          <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6/jquery.min.js"></script>
