--- a/index.html
+++ b/index.html
@@ -8,41 +8,106 @@
         <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
         <link href="css/reset.css" rel="stylesheet" type="text/css" />
         <link href="css/main.css" rel="stylesheet" type="text/css" />
+        <link href="css/menu.css" rel="stylesheet" type="text/css" />
+        <link href="css/gallerie.css" rel="stylesheet" type="text/css" />
         <link href="css/tipsy.css" rel="stylesheet" type="text/css" />
         <script src="js/modernizr.custom.57212.js"></script>
      </head>
 
      <body>
-         <img src="img/background.jpg" class="bg">
-         <div id="container">
-         <img src="img/gribouillis.png" class="grib">
-                 <div class="title">
-                     <h1>LET<span>'</span>S ROOT#</h1>
-                     <h2>DÉVELOPPEMENT D'APPLICATIONS WEB</h2>
-                 </div>
-                 <div class="contact rotate_35">
-                     <a href="/realisations.html" title="Demandez-moi ce que je peux faire pour vous" class="rotate_hover" rel="tipsy">CONTACT</a>
-                 </div>
-                 <div class="cv rotate_35">
-                     <a href="http://re.vu/stephane" title="Ce que j'ai fait avant Let's root# (nouvelle fenêtre)" class="rotate_hover" target="_blank" rel="tipsy">CV</a>
-                 </div>
-                 <div class="realisations rotate_minus_15">
-                     <a href="/gallerie.html" title="Ce que j'ai fait depuis Let's root#" class="rotate_hover" rel="tipsy">RÉALISATIONS</a>
-                 </div>
-         </div>
-         <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6/jquery.min.js"></script>
-         <script type='text/javascript' src='js/jquery.tipsy.js'></script>
-         <script type='text/javascript' src='js/letsroot.js'></script>
-         <script type="text/javascript">
-             var _gaq = _gaq || [];
-             _gaq.push(['_setAccount', 'UA-25220757-1']);
-             _gaq.push(['_trackPageview']);
 
-             (function() {
+         <img src="img/background.jpg" class="bg">
+
+             <ul id="nav">
+                 <li id="navi1" class="current">
+                 <a href="#section-1" title="Demandez-moi ce que je peux faire pour vous" class="" rel="">ACCUEIL</a>
+                 </li>
+                 <li id="navi2">
+                 <a href="#section-2" title="Ce que j'ai fait depuis Let's root#" class="" rel="">RÉALISATIONS</a>
+                 </li>
+                 <li id="navi3" class="">
+                 <a href="#section-3" title="Demandez-moi ce que je peux faire pour vous" class="" rel="">CONTACT</a>
+                 </li>
+                 <li id="navi4">
+                 <a href="http://re.vu/stephane" title="Ce que j'ai fait avant Let's root# (nouvelle fenêtre)" class="" target="_blank" rel="">CV (nouvelle fenêtre)</a>
+                 </li>
+             </ul>
+
+             <div id="container">
+                 <div class="section" id="section-1">
+                     <img src="img/gribouillis.png" class="grib">
+                     <div class="title">
+                         <h1>LET<span>'</span>S ROOT#</h1>
+                         <h2>DÉVELOPPEMENT D'APPLICATIONS WEB</h2>
+                     </div>
+                 </div>
+
+                 <div class="section" id="section-2">
+                     <div class="content">
+                         <div class="row">
+                             <div class="span-one-third">
+                                 <a href="http://www.lapaperie.fr" target="_blank" title="La Paperie - Centre National des Arts de la Rue" rel="tipsy">
+                                     <img src="img/lapaperie.png" alt="" width="256" height="160" class="diapo">
+                                 </a>
+                             </div>
+                             <div class="span-one-third">
+                                 <a href="http://actes-environnement.com" target="_blank" title="Actes Environnement - Valorisation des Déchets" rel="tipsy">
+                                     <img src="img/actes-environnement.png" alt="" width="256" height="160" class="diapo">
+                                 </a>
+                             </div>
+                             <div class="span-one-third">
+                                 <a href="http://nantes-data-journalisme.net" target="_blank" title="Laboratoire de Data Journalism" rel="tipsy">
+                                     <img src="img/datanantes.png" alt="" width="256" height="160" class="diapo">
+                                 </a>
+                             </div>
+                         </div>
+                     </div>
+                 </div>
+
+                 <div class="section" id="section-3">
+                     <div class="content">
+                         <p>
+                         Associations, Artisans, Commerçants, Particuliers, je développe pour vous des <strong>sites de qualités</strong> à moindre coût.
+                         </p>
+                         <p>
+                         Agences Web, SS2I, Bureaux de développement, je mets mes compétences de développeur web à <strong>votre service</strong>.
+                         </p>
+                         <p>
+                         Pour les plus geek d'entre vous, mon code est visible sur <a href="https://github.com/Anselme" title="Code de Stéphane Girault sur Github">Github</a>.
+                         </p>
+                         <h3>CONTACT</h3>
+                         <p>
+                         stephane@letsroot.net
+                         </p>
+                         <h3>CV</h3>
+                         <p>
+                         <a href="http://www.doyoubuzz.com/stephane-girault/" alt="CV Stéphane Girault ">Mes vies antérieures</a>
+                         </p>
+                     </div>
+                 </div>
+
+             </div>
+
+             <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.6/jquery.min.js"></script>
+             <script type='text/javascript' src='js/sizzle.js'></script>
+             <script type='text/javascript' src='js/jquery.scrollTo-1.4.2-min.js'></script>
+             <script type='text/javascript' src='js/jquery.nav.min.js'></script>
+             <script type='text/javascript' src='js/jquery.tipsy.js'></script>
+             <script type='text/javascript' src='js/menu.js'></script>
+             <script type='text/javascript' src='js/letsroot.js'></script>
+             <script type="text/javascript">
+                 $(document).ready(function() {$('#nav').onePageNav();});
+             </script>
+             <script type="text/javascript">
+                 var _gaq = _gaq || [];
+                 _gaq.push(['_setAccount', 'UA-25220757-1']);
+                 _gaq.push(['_trackPageview']);
+
+                 (function() {
               var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
               ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
               var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
               })();
-</script>
-     </body>
- </html>
+          </script>
+      </body>
+  </html>
