--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 						<!-- Me -->
 							<article id="me" class="panel">
 								<header>
-									<h1>Let's Root#</h1>
+                                <h1>LET<span>'</span>S ROOT#</h1>
 									<span class="byline">Développement d'Applications Web</span>
 								</header>
 								<a href="#work" class="jumplink pic">
@@ -92,7 +92,7 @@
 								<header>
 									<h2>Contact</h2>
 								</header>
-								<form action="#" method="post">
+								<form action="contact.php" method="post">
 									<div>
 										<div class="row">
 											<div class="6u">
